--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,41 +2,53 @@ name: CI - Products API
 
 on:
   push:
-    branches:
-      - develop
+    branches: [develop, main]
   pull_request:
-    branches:
-      - develop
+    branches: [develop, main]
 
 jobs:
-  test-and-analyze:
-    name: Test + Coverage + SonarCloud
+  build-and-test:
     runs-on: ubuntu-latest
 
+    env:
+      MONGO_URI: ${{ secrets.MONGO_URI }}
+
     steps:
-      - name: ⬇️ Checkout repository
-        uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0  # Important pour Sonar
 
-      - name: ⚙️ Setup Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.11'
 
-      - name: 🧪 Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install pytest pytest-cov
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        pip install pylint pytest pytest-cov
 
-      - name: 🧪 Run tests with coverage
-        run: |
-          pytest --cov=app --cov-report=xml
+    - name: Run pylint
+      run: |
+        pylint app/ --fail-under=8
 
-      - name: ☁️ SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@v2.0.2
-        with:
-          projectBaseDir: .
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_PROJECT_KEY: AdrianeRuggiero_api-products
-          SONAR_ORGANIZATION: adrianeruggiero
+    - name: Run tests with coverage
+      run: |
+        pytest --cov=app --cov-report=xml
+      env:
+        PYTHONPATH: .
+
+    - name: SonarQube Scan
+      uses: SonarSource/sonarqube-scan-action@v5
+      env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      with:
+        args: >
+          -Dsonar.projectKey=AdrianeRuggiero_MSPR_4_api-products
+          -Dsonar.organization=adrianeruggiero
+          -Dsonar.sources=app
+          -Dsonar.tests=tests
+          -Dsonar.python.coverage.reportPaths=coverage.xml
+          -Dsonar.language=py
